# hq

./: .gitignore  README.md  hq.spec  pyproject.toml
.github/workflows/: build-windows.yml
data/: characters.json  objects.json
data/maps/: dungeon.json
data/quests/: quest1.json
docs/: README.md
src/: __init__.py  audio.py  board.py  config.json  dungeon.py  localization.py  main.py  objects.py  player.py
tests/: test_flood_fill_room.py
