[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hq"
version = "0.1.0"
description = "Unofficial HeroQuest-inspired pygame prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6,<3",
]

[project.scripts]
hq-game = "main:run"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]
